Fix instance bottom bar overlapping main content via @Real-Gecko

--- a/static/css/webvirtcloud.css
+++ b/static/css/webvirtcloud.css
@@ -7,7 +7,7 @@
 /* Global Styles */
 
 body {
-    padding-bottom: 40px;
+    padding-bottom: 50px;
 }
 
 .container {
